NIHVIVO-2163: Fixed vertical alignment between 'Edit this individual'  link and 'Verbose property display' text

--- a/webapp/web/css/individual/individual.css
+++ b/webapp/web/css/individual/individual.css
@@ -21,6 +21,7 @@
 #admin a.edit-individual {
     padding-left: 0;
     border-left: none;
+    padding-top: 7px;
 }
 #verbosePropertyForm{
     float: right;
